force-app/main/default/objects/Issue__c/fields/Good_First_Issue__c.field-meta.xml
<CustomField>
    <fullName>Good_First_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good First Issue</label>
    <type>Checkbox</type>
</CustomField>