force-app/main/default/objects/Issue__c/validationRules/Closed_Issue_Must_Have_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Issue_Must_Have_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Closed&quot;),
ISBLANK(Due_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Closed issues must have a Due Date.</errorMessage>
</ValidationRule>