force-app/main/default/objects/Issue__c/validationRules/Completed_Issue_Hours_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Issue_Hours_Required</fullName>
    <active>true</active>
    <description>Completed issues must have valid estimated hours.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),
Estimated_Hours__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Estimated_Hours__c</errorDisplayField>
    <errorMessage>Completed issues must have Estimated Hours greater than 0.</errorMessage>
</ValidationRule>