force-app/main/default/objects/Issue__c/validationRules/Due_Date_Cannot_Be_In_The_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Cannot_Be_In_The_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Due_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be before today.</errorMessage>
</ValidationRule>