force-app/main/default/objects/Issue__c/validationRules/Estimated_Hours_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Hours_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Estimated hours must be greater than zero.</description>
    <errorConditionFormula>Estimated_Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Estimated_Hours__c</errorDisplayField>
    <errorMessage>Estimated Hours must be greater than 0.</errorMessage>
</ValidationRule>