force-app/main/default/objects/Issue__c/validationRules/Good_First_Issue_Cannot_Be_Advanced.validationRule-meta.xml
<ValidationRule>
    <fullName>Good_First_Issue_Cannot_Be_Advanced</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Good_First_Issue__c,
ISPICKVAL(Difficulty__c,&quot;Advanced&quot;)
)</errorConditionFormula>
    <errorDisplayField>Difficulty__c</errorDisplayField>
    <errorMessage>Good First Issues cannot have Advanced difficulty.</errorMessage>
</ValidationRule>